# Advanced-Programming-2nd-milestone

./: AStar.cpp  AStar.h  BFS.cpp  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  ClientHandler.h  ClientHandlerAbs.h  ClientInputToMatrixConverter.cpp  ClientInputToMatrixConverter.h  ClientInputToProblemConverter.h  ClientInputToStringConverter.cpp  ClientInputToStringConverter.h  ConstMatrix.h  Cost.cpp  Cost.h  DFS.cpp  DFS.h  FileCacheManager.h  FileMatrixCacheManager.cpp  FileMatrixCacheManager.h  FileStringCacheManager.cpp  FileStringCacheManager.h  GraphSearcher.h  Matrix.h  MatrixGraph.cpp  MatrixGraph.h  MatrixGraphSearcher.h  MatrixShortestPathSolver.cpp  MatrixShortestPathSolver.h  MatrixToFileNameConverter.cpp  MatrixToFileNameConverter.h  MatrixVertex.cpp  MatrixVertex.h  MatrixVertexCreator.cpp  MatrixVertexCreator.h  MatrixVertexFactory.cpp  (+40 more)
CacheManagers/: CacheManager.h
CacheManagers/FileCacheManagers/: FileCacheManager.h  FileMatrixCacheManager.h  FileStringCacheManager.cpp  FileStringCacheManager.h
ClientHandlers/: ClientHandler.h  ClientHandlerAbs.h  MyClientHandler.cpp  MyClientHandler.h  MyTestClientHandler.cpp  MyTestClientHandler.h
ClientInputInterpreters/: ClientInputToMatrixConverter.cpp  ClientInputToMatrixConverter.h  ClientInputToProblemConverter.h  ClientInputToStringConverter.h
ProblemsToFileNamesConverters/: MatrixToFileNameConverter.cpp  MatrixToFileNameConverter.h  StringToFileNameConverter.cpp  StringToFileNameConverter.h  ToFileNameConverter.h
Searchables/: MatrixGraph.cpp  MatrixGraph.h  Searchable.h
Searchers/: Searcher.h
Searchers/GraphSearchers/: AStar.cpp  AStar.h  BFS.cpp  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  DFS.cpp  DFS.h  GraphSearcher.h  MatrixGraphSearcher.h
ServerRunners/: ParallelServerRunner.cpp  ParallelServerRunner.h  SerialServerRunner.cpp  SerialServerRunner.h  ServerRunner.h
Servers/: MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  Server.h  ServerAbs.h
Solvers/: MatrixShortestPathSolver.cpp  MatrixShortestPathSolver.h  Solver.h  StringReverser.h
VerticesClasses/: Vertex.h  VertexAdapter.h
VerticesClasses/MatrixVerticesClasses/: MatrixVertex.h  MatrixVertexCreator.cpp  MatrixVertexCreator.h  MatrixVertexFactory.h
algorithms results/: BFS runs.txt  Best First Search runs.txt  DFS runs.txt  input matrices.txt
documentation/: Searchables  Searchers  Solvers  Vertexes And Friends
